# atsar

./: CMakeLists.txt  atsar.cpp  atsar.h  atsar.ui  atsarquiz.cpp  atsarquiz.h  atsarquiz.ui  main.cpp  resources.qrc
.github/workflows/: cmake-multi-platform.yml
atsar-rust-lib/: atsa_questions.d  atsa_questions.dll.exp  atsa_questions.dll.lib
atsar-rust-lib/src/: rust_questions_api.h
